Archive2/06/c47645c8a11b2b/output
main.cpp:23:17: error: expected primary-expression before '(' token
     Foo f3 = Foo(Test);
                 ^
main.cpp:23:22: error: expected primary-expression before ')' token
     Foo f3 = Foo(Test);
                      ^
